--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Home YelpCamp</h1>
+    <h1>Home CampPrime</h1>
     <a href="/campgrounds">All Campgrounds</a>
 </body>
 
