--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark mt-auto py-3">
     <div class="container">
-        <span class="text-muted">&copy; YelpCamp 2024</span>
+        <span class="text-muted">&copy; CampPrime 2024</span>
     </div>
 </footer>
