--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -13,9 +13,9 @@
                 <label class="form-label" for="location">Location</label>
             </div>
 
-            <div class="form-floating mb-3">
-                <input type="file" name="image" multiple>
-                <label class="form-label" for="location">Add Images </label>
+            <div class="input-group mb-3">
+                <input type="file" class="form-control" id="image" name="image" multiple>
+                <label class="input-group-text" for="image">Add Images</label>
             </div>
             
             <div class="input-group mb-3">
@@ -26,6 +26,20 @@
             <div class="form-floating mb-3">
                 <textarea class="form-control mb-10" placeholder="Leave a comment here" id="description" name="campground[description]" required><%= campground.description %></textarea>
                 <label for="description mb-10">Comments</label>
+            </div>
+
+            <h4>Delete ?</h4>
+            <div class="mb-3 d-flex flex-wrap">
+                <% campground.images.forEach((img, index) => { %>
+                    <div class="form-check-inline d-flex border rounded p-3 mb-3">
+                        <input type="checkbox" id="image-<%= index %>" name="deleteImages[]" value="<%= img.filename %>">
+                        <label for="image-<%= index %>" class="align-self-center">
+                            <img src="<%= img.thumbnail %>" alt="" class="p-0 mx-3 rounded img-thumbnail">
+                        </label>         
+                    </div>
+                    
+                <% }); %>
+
             </div>
 
             <button class="btn btn-primary mb-3">Edit campground</button>
