--- a/views/campgrounds/error.ejs
+++ b/views/campgrounds/error.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') -%>  <%# ejs mate ka hai ye %>
+<% layout('layouts/boilerplate') -%>
 
 <div class="row">
     <div class="col-6 offset-3">
