--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,4 @@
-<% layout('layouts/boilerplate') %>  <%# ejs mate ka hai ye %>
+<% layout('layouts/boilerplate') %> 
 
 <h1>All campgrounds</h1>
 
@@ -6,7 +6,9 @@
     <div class="card mb-3">
         <div class="row">
             <div class="col-md-4">
-                <img class="img-fluid" src="<%= campground.images[rand01].url %>">
+                <% if(campground.images[0]){ %>
+                <img class="img-fluid rounded" src="<%= campground.images[0].url %>">
+                <% } %>
             </div>
             <div class="col-md-8">
                 <div class="card-body">
