--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -16,7 +16,7 @@
 
     <main class="container mt-5">
       <%- include('../partials/flash') %>
-      <%- body -%> <!-- isme inject hoge ejs ki files (ejs mate) -->
+      <%- body -%>
     </main>
 
     <%- include('../partials/footer') %>
