--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,11 +1,11 @@
-<% if (success && success.length) {%>  <!--blank message nahi dikhega-->
+<% if (success && success.length) {%>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
         <%= success %>
         <button tabindex="-1" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %>
 
-<% if (error && error.length) {%>  <!--blank message nahi dikhega-->
+<% if (error && error.length) {%>
     <div class="alert alert-danger alert-dismissible fade show" role="alert">
         <%= error %>
         <button tabindex="-1" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
