adding images to readme

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,4 +1,6 @@
 <% layout('layouts/boilerplate') %>
+
+<div class="col-6 offset-3">
 <h1>Register</h1>
 
 <form action="/register" class="needs-validation" method="post" novalidate autocomplete="on">
@@ -25,3 +27,4 @@
     </div>
     <button class="btn btn-success">Submit</button>
 </form>
+</div>
