--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,21 +1,23 @@
 <% layout('layouts/boilerplate') %>
-<h1>Login</h1>
 
-<form action="/login" class="needs-validation" method="post" novalidate autocomplete="off">
-    <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="username" name="username" placeholder="Username" required>
-        <label class="form-label" for="username">Username</label>
-        <div class="valid-feedback">
-            Looks good!
+<div class="col-6 offset-3">
+    <h1>Login</h1>
+    <form action="/login" class="needs-validation" method="post" novalidate autocomplete="off">
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="username" name="username" placeholder="Username" required>
+            <label class="form-label" for="username">Username</label>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
-    </div>
 
-    <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="Password" name="password" placeholder="Password" required>
-        <label class="form-label" for="Password">Password</label>
-        <div class="valid-feedback">
-            Looks good!
+        <div class="form-floating mb-3">
+            <input type="password" class="form-control" id="Password" name="password"  placeholder="Password" required>
+            <label class="form-label" for="Password">Password</label>
+            <div class="valid-feedback">
+                Looks good!
+            </div>
         </div>
-    </div>
-    <button class="btn btn-success">Submit</button>
-</form>
+        <button class="btn btn-success">Submit</button>
+    </form>
+</div>
